--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="C:\Users\brian\Documents\NetBeansProjects\libreriaegg\src\main\resources\templates\style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<body>
-    <header></header>
+<body >
+  
+    <header class="header">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Biblioteca Virtual</a>
@@ -47,9 +49,10 @@
       </nav>
     </header>
     <br>
-    <h1 align="center"> Bienvenido a la Biblioteca Virtual </h1>
+    <div class="botonera" align="center">
+    <h1 class="bienvenido"> Bienvenido a la Biblioteca Virtual </h1>
     <br>
-    <div align="center">
+    
     <button type="button" class="btn btn-primary btn-lg" >Pasear por la Biblioteca</button>
     <button type="button" class="btn btn-secondary btn-lg">Cargar Libros</button>
 </div>
