cambiando estilos del html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,9 +50,10 @@
     </header>
     <br>
     <div class="botonera" align="center">
-    <h1 class="bienvenido"> Bienvenido a la Biblioteca Virtual </h1>
+      <div class="titulo">
+    <h1 style="color: black;"> Bienvenido a la Biblioteca Virtual </h1>
+      </div>
     <br>
-    
     <button type="button" class="btn btn-primary btn-lg" >Pasear por la Biblioteca</button>
     <button type="button" class="btn btn-secondary btn-lg">Cargar Libros</button>
 </div>
