--- a/src/main/resources/templates/style.css
+++ b/src/main/resources/templates/style.css
@@ -13,8 +13,8 @@ body{
 .contenedor{
     width: 45%;
     border-radius: 2em;
-    background-color: whitesmoke; 
-    opacity: 55%;
+    background-color: rgba(255,255,255,0.6); 
+    color:black ;
 }
 
 
